--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ Django==3.2.16
 django-filter==23.5
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
-djangorestframework-simplejwt==4.7.2
+djangorestframework-simplejwt>=4.7.0,<6.0
 djoser==2.2.3
 flake8==7.1.1
 flake8-isort==6.0.0
@@ -38,3 +38,6 @@ sqlparse==0.5.1
 tomli==2.0.1
 typing_extensions==4.12.2
 urllib3==2.2.2
+python-dotenv==1.0.1
+django-cors-headers==3.13.0
+psycopg2-binary==2.9.3 
