--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,12 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
     services:
       postgres:
         image: postgres:13.10
         env:
           POSTGRES_USER: django_user
-          POSTGRES_PASSWORD: 1808
+          POSTGRES_PASSWORD: 18082001z
           POSTGRES_DB: django
         ports:
           - 5432:5432
@@ -26,7 +23,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
