--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         python -m pip install --upgrade pip 
         pip install flake8==6.0.0 flake8-isort==6.0.0
         pip install -r ./backend/requirements.txt
-    - name: Test with flake8 and django tests
+    - name: Test with flake8
       env:
         POSTGRES_USER: django_user
         POSTGRES_PASSWORD: 1808
@@ -39,8 +39,6 @@ jobs:
         DB_PORT: 5432
       run: |
         python -m flake8 backend/
-        cd backend/
-        python manage.py test
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -106,7 +104,7 @@ jobs:
     needs:
       - build_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
-      - build_gateway_and_push_to_docker_hub
+      - build_nginx_and_push_to_docker_hub
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
