--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,27 @@
 server {
+  server_name foodandmemes.serveminecraft.net;
   listen 80;
   index index.html;
   server_tokens off;
+  client_max_body_size 10M;
 
   location /api/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/api/;
     client_max_body_size 20M;
   }
+
+  location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+  }
+
+  location /api/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:9000/api/;
+    client_max_body_size 20M;
+  }
+
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
