--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,9 +96,9 @@ jobs:
       - name: Push to DockerHub
         uses: docker/build-push-action@v4
         with:
-          context: ./infra/
+          context: ./nginx/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_infra:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_gateway:latest
   deploy:
     runs-on: ubuntu-latest
     needs:
