--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -26,9 +26,9 @@ services:
   frontend:
     env_file: .env
     image: heiikousen/foodgram_frontend
-    command: cp -r /app/frontend/build/. /frontend_static/
+    command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static:/frontend_static
+      - static:/app/frontend_static
   
   gateway:
     container_name: foodgram-proxy
