--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -5,7 +5,6 @@ volumes:
 
 services:
   db:
-    container_name: foodgram-db
     image: postgres:13
     env_file:
       - .env
@@ -13,7 +12,6 @@ services:
       - pg_data:/var/lib/postgresql/data
 
   backend:
-    container_name: foodgram-backend
     image: heiikousen/foodgram_backend
     env_file:
       - .env
@@ -26,12 +24,11 @@ services:
   frontend:
     env_file: .env
     image: heiikousen/foodgram_frontend
-    command: cp -r /app/build/. app/static/
+    command: cp -r /frontend/build/. /static/
     volumes:
-      - static:/app/static
+      - static:/static
   
   gateway:
-    container_name: foodgram-proxy
     image: heiikousen/foodgram_gateway
     ports:
       - 9000:80
