--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,9 @@ services:
   frontend:
     env_file: .env
     build: ./frontend/
-    command: cp -r /app/build/. /static/
+    command: cp -r /app/build/. /app/static/
     volumes:
-      - static:/static
+      - static:/app/static
   
   nginx:
     container_name: foodgram-proxy
