--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
-known_local_folder=backend.recipes,backend.users,backend.api
+known_local_folder=backend
 sections=FUTURE,STDLIB,THIRDPARTY,LOCALFOLDER 
