--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,11 @@ server {
     client_max_body_size 20M;
   }
 
+  location /s/ {
+      proxy_set_header Host $http_host;
+      proxy_pass http://backend:9000/s/;
+  }
+
   location /admin/ {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:9000/admin/;
